# v4pi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  alpr_test.py  cmake_install.cmake  fyp  fyp-alpr  fyp-sighthound  imageCV.ppm  main.cpp  openALPR_test  out.avi  out.ppm  somefile.264  test.cpp  v4l2_test  v4l2_test.c
Headers/: alpr_jpeg.h  camera_grab.h  data_types_enum.h  demo_day.h  launcher.h  launcher_cv.h  v4l2_factory.h  v4l2_handler.h  v4l2_interface.h  v4l2_jpeg.h
Sources/: alpr_jpeg.cpp  camera_grab.cpp  demo_day.cpp  launcher.cpp  launcher_cv.cpp  v4l2_factory.cpp  v4l2_handler.cpp  v4l2_jpeg.cpp
